# ai-pdf-document-splitter

./: .gitignore  Aptfile  Procfile  README.md  app.py  env.example  heroku_setup.sh  pyproject.toml  requirements.txt  worker.py
notebooks/: evaluate_clusters.ipynb  visualise_embeddings.ipynb
src/splitter/: domain_models.py  main.py  models.py  pdf_merger.py  pdf_splitter.py  pipeline.py  settings.py  text_extractor.py
src/splitter/ml_models/: clustering.py  embedding.py
src/splitter/processors/: document_processor.py  pdf_merger.py  pdf_processor.py  pdf_splitter.py  text_extractor.py
src/web/: app.py  worker.py
