[tool.poetry]
name = "pdf-document-splitter"
version = "0.1.0"
description = ""
authors = ["Zarif Aziz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^4.3.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
pdf2image = "^1.17.0"
numpy = "^2.0.1"
pytesseract = "^0.3.10"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
